fixed issue on profile page where image extended outside of container on mobile. Also fixed padding issue on nav

--- a/dest/styles.css
+++ b/dest/styles.css
@@ -23,7 +23,7 @@
     }
 }@supports not (-webkit-background-clip: text) {.navi__header {color: #c5b358;
     }
-}.menu {display: -ms-flexbox;display: flex;-ms-flex-direction: row;flex-direction: row;-ms-flex-pack: center;justify-content: center;-ms-flex-align: center;align-items: center;width: 100%;
+}.menu {display: -ms-flexbox;display: flex;-ms-flex-direction: row;flex-direction: row;-ms-flex-pack: center;justify-content: center;-ms-flex-align: center;align-items: center;padding: 0;width: 100%;
 }@media (min-width: 30em) {.menu {-ms-flex-direction: row;flex-direction: row;width: 40%;
     }
 }.menu__item {margin: 0 5px;padding: 5px;width: 33.33333%;border-radius: 2px;text-align: center;border: 2px solid #c5b358;transition: .5s all;
@@ -69,9 +69,13 @@
     }
 }.family-list__img {width: 100%;border: 1px solid #c5b358;object-fit: cover;object-position: 50% 10%;
 }.family-list__name {font-size: 2em;text-align: center;
-}.profile {margin: 75px auto;width: 75%;
+}.profile {margin: 75px auto;width: 100%;
+}@media (min-width: 30em) {.profile {width: 75%;
+    }
 }.profile__intro {text-align: center;font-size: 3em;text-shadow: 0 0 13px darkgoldenrod;
-}.profile__img-container {margin-top: 25px;margin-right: auto;margin-left: auto;width: 400px;height: 400px;
+}.profile__img-container {margin-top: 25px;margin-right: auto;margin-left: auto;width: 100%;height: 400px;
+}@media (min-width: 30em) {.profile__img-container {width: 400px;
+    }
 }.profile__img {width: 100%;border: 1px solid #c5b358;object-fit: cover;object-position: 50% 10%;
 }.footer {padding-top: 20px;height: 100px;line-height: 10px;
 }.footer__source {font-weight: bolder;letter-spacing: 1px;transition: .3s all;
